version/0.16/_sources/api/ansys/health/heart/settings/settings/AtrialFiber.rst.txt






:class:`AtrialFiber`
====================


.. py:class:: ansys.health.heart.settings.settings.AtrialFiber(/, **data: Any)

   Bases: :py:obj:`BaseSettings`


   
   Class for keeping track of atrial fiber settings.

   Default parameters are from doi.org/10.1016/j.cma.2020.113468 for idealized geometry.
   Defines atrial fiber bundle parameters and orientations.

   :Parameters:

       **tau_mv** : :class:`python:float`, default: 0.0
           Mitral valve parameter.

       **tau_lpv** : :class:`python:float`, default: 0.0
           Left pulmonary vein parameter.

       **tau_rpv** : :class:`python:float`, default: 0.0
           Right pulmonary vein parameter.

       **tau_tv** : :class:`python:float`, default: 0.0
           Tricuspid valve parameter.

       **tau_raw** : :class:`python:float`, default: 0.0
           Right atrial wall parameter.

       **tau_ct_minus** : :class:`python:float`, default: 0.0
           Crista terminalis minus parameter.

       **tau_ct_plus** : :class:`python:float`, default: 0.0
           Crista terminalis plus parameter.

       **tau_icv** : :class:`python:float`, default: 0.0
           Inferior vena cava parameter.

       **tau_scv** : :class:`python:float`, default: 0.0
           Superior vena cava parameter.

       **tau_ib** : :class:`python:float`, default: 0.0
           Isthmus bundle parameter.

       **tau_ras** : :class:`python:float`, default: 0.0
           Right atrial septum parameter.













   .. rubric:: Examples

   >>> atrial = AtrialFiber(tau_mv=0.5, tau_tv=0.3)
   >>> print(atrial.tau_mv)
   0.5

   ..
       !! processed by numpydoc !!


.. py:currentmodule:: AtrialFiber

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~tau_mv`
            - 
          * - :py:attr:`~tau_lpv`
            - 
          * - :py:attr:`~tau_rpv`
            - 
          * - :py:attr:`~tau_tv`
            - 
          * - :py:attr:`~tau_raw`
            - 
          * - :py:attr:`~tau_ct_minus`
            - 
          * - :py:attr:`~tau_ct_plus`
            - 
          * - :py:attr:`~tau_icv`
            - 
          * - :py:attr:`~tau_scv`
            - 
          * - :py:attr:`~tau_ib`
            - 
          * - :py:attr:`~tau_ras`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.health.heart.settings.settings import AtrialFiber


Attribute detail
----------------

.. py:attribute:: tau_mv
   :type:  float
   :value: None


.. py:attribute:: tau_lpv
   :type:  float
   :value: None


.. py:attribute:: tau_rpv
   :type:  float
   :value: None


.. py:attribute:: tau_tv
   :type:  float
   :value: None


.. py:attribute:: tau_raw
   :type:  float
   :value: None


.. py:attribute:: tau_ct_minus
   :type:  float
   :value: None


.. py:attribute:: tau_ct_plus
   :type:  float
   :value: None


.. py:attribute:: tau_icv
   :type:  float
   :value: None


.. py:attribute:: tau_scv
   :type:  float
   :value: None


.. py:attribute:: tau_ib
   :type:  float
   :value: None


.. py:attribute:: tau_ras
   :type:  float
   :value: None






